# Multilingual-Literature-Rag

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
research/: Implement Multilingual Retrieval-Augmented Generation.ipynb
